[gd_scene load_steps=8 format=2]

[ext_resource path="res://scene/build1/berth/berth_atlastexture.tres" type="Texture" id=1]
[ext_resource path="res://assets/new/Atlas/GasPump.atlastex" type="Texture" id=2]
[ext_resource path="res://scene/build1/berth/Berth.gd" type="Script" id=3]
[ext_resource path="res://assets/new/seaport_sprites.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=3]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 418, 297, 171, 248 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 71.5, 116.5 )

[sub_resource type="CircleShape2D" id=2]
radius = 54.0093

[node name="Berth" type="StaticBody2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_vertical_guides_": [ 127.0 ]
}
s = "FUEL"
fuel = "res://assets/new/Atlas/GasPump.atlastex"
cargo = "res://assets/new/Atlas/Cargo.atlastex"
repair = "res://assets/new/Atlas/Repair.atlastex"

[node name="berthSprite2" type="Sprite" parent="."]
position = Vector2( -7, 7 )
texture = SubResource( 3 )

[node name="berthSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="labelSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 14.5, 0.5 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -130, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="obstacle" type="Area2D" parent="." groups=["obstacle"]]
position = Vector2( -130, 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="obstacle"]
position = Vector2( 145, 0 )
shape = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -229, 0 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="obstacle" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="obstacle" to="." method="_on_Area2D_body_exited"]
